Elasticsearch platform binding (6.x) + maven plugin

--- a/rre-maven-plugin/pom.xml
+++ b/rre-maven-plugin/pom.xml
@@ -12,6 +12,8 @@
     <name>RRE - Maven Plugins</name>
     <modules>
         <module>rre-maven-solr-plugin</module>
+        <module>rre-maven-report-plugin</module>
+        <module>rre-maven-elasticsearch-plugin</module>
     </modules>
     <packaging>pom</packaging>
     <properties>
