--- a/rre-maven-plugin/rre-maven-elasticsearch-plugin/pom.xml
+++ b/rre-maven-plugin/rre-maven-elasticsearch-plugin/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>rre</artifactId>
+        <artifactId>rre-maven-plugin</artifactId>
         <groupId>io.sease</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>rre-core</artifactId>
-    <name>RRE - Core libraries</name>
+    <artifactId>rre-maven-elasticsearch-plugin</artifactId>
+    <version>6.2.2</version>
     <dependencies>
         <dependency>
             <groupId>io.sease</groupId>
@@ -17,10 +17,9 @@
             <version>1.0</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
+            <groupId>io.sease</groupId>
+            <artifactId>rre-search-platform-elasticsearch-impl</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
