--- a/rre-maven-plugin/rre-maven-solr-plugin/src/test/resources/pom.xml
+++ b/rre-maven-plugin/rre-maven-solr-plugin/src/test/resources/pom.xml
@@ -6,15 +6,18 @@
                 <artifactId>rre-maven-solr-plugin</artifactId>
                 <version>7.1.0</version>
                 <configuration>
-                    <configurations-folder>/Users/agazzarini/Projects/rre/configuration_sets</configurations-folder>
-                    <corporaFolder>/Users/agazzarini/Projects/rre/collection_sets</corporaFolder>
-                    <ratingsFolder>/Users/agazzarini/Projects/rre/ratings</ratingsFolder>
-                    <templatesFolder>/Users/agazzarini/Projects/rre/templates</templatesFolder>
+                    <configurations-folder>/Users/agazzarini/workspaces/BarFridges_IJ/bfa_solr/bfa-querying/src/solr/configuration_sets</configurations-folder>
+                    <corporaFolder>/Users/agazzarini/workspaces/BarFridges_IJ/bfa_solr/bfa-querying/src/solr/corpora</corporaFolder>
+                    <ratingsFolder>/Users/agazzarini/workspaces/BarFridges_IJ/bfa_solr/bfa-querying/src/solr/ratings</ratingsFolder>
+                    <templatesFolder>/Users/agazzarini/workspaces/BarFridges_IJ/bfa_solr/bfa-querying/src/solr/templates</templatesFolder>
                     <metrics>
-                        <param>io.sease.rre.core.domain.metrics.impl.PrecisionAtOne</param>
-                        <param>io.sease.rre.core.domain.metrics.impl.PrecisionAtTwo</param>
-                        <param>io.sease.rre.core.domain.metrics.impl.PrecisionAtThree</param>
+                       <!--
+                       <param>io.sease.rre.core.domain.metrics.impl.PrecisionAtOne</param>
+                       <param>io.sease.rre.core.domain.metrics.impl.PrecisionAtTwo</param>
+                       <param>io.sease.rre.core.domain.metrics.impl.PrecisionAtThree</param>
+                       -->
                         <param>io.sease.rre.core.domain.metrics.impl.PrecisionAtTen</param>
+                        <param>io.sease.rre.core.domain.metrics.impl.NDCG</param>
                     </metrics>
                 </configuration>
             </plugin>
