--- a/rre-search-platform/rre-search-platform-elastic-search-impl/pom.xml
+++ b/rre-search-platform/rre-search-platform-elastic-search-impl/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>rre-search-platform-elasticsearch-impl</artifactId>
-    <version>6.2.3</version>
+    <version>6.2.2</version>
     <name>RRE - Elasticsearch platform binding</name>
     <dependencies>
         <dependency>
@@ -26,11 +26,22 @@
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
             <version>${project.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.elasticsearch.plugin</groupId>
             <artifactId>transport-netty4-client</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>org.codelibs.elasticsearch.module</groupId>
