--- a/rre-maven-plugin/rre-maven-solr-plugin/src/test/resources/pom.xml
+++ b/rre-maven-plugin/rre-maven-solr-plugin/src/test/resources/pom.xml
@@ -21,4 +21,16 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.10.0</version>
+        </dependency>
+    </dependencies>
 </project>
