--- a/rre-maven-plugin/rre-maven-solr-plugin/src/test/resources/pom.xml
+++ b/rre-maven-plugin/rre-maven-solr-plugin/src/test/resources/pom.xml
@@ -10,6 +10,10 @@
                     <corporaFolder>/Users/agazzarini/workspaces/BarFridges_IJ/bfa_solr/bfa-querying/src/solr/corpora</corporaFolder>
                     <ratingsFolder>/Users/agazzarini/workspaces/BarFridges_IJ/bfa_solr/bfa-querying/src/solr/ratings</ratingsFolder>
                     <templatesFolder>/Users/agazzarini/workspaces/BarFridges_IJ/bfa_solr/bfa-querying/src/solr/templates</templatesFolder>
+                    <compoundMetrics>
+                        <param>io.sease.rre.core.domain.metrics.impl.MAP</param>
+                        <param>io.sease.rre.core.domain.metrics.impl.GMAP</param>
+                    </compoundMetrics>
                     <metrics>
                         <param>io.sease.rre.core.domain.metrics.impl.PrecisionAtOne</param>
                         <param>io.sease.rre.core.domain.metrics.impl.PrecisionAtTwo</param>
