--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,6 @@
         <module>rre-maven-plugin</module>
         <module>rre-core</module>
         <module>rre-search-platform</module>
-        <module>rre-solr-request-handler</module>
+        <module>rre-server</module>
     </modules>
 </project>
