--- a/rre-maven-plugin/rre-maven-report-plugin/pom.xml
+++ b/rre-maven-plugin/rre-maven-report-plugin/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>poi-ooxml</artifactId>
             <version>3.15</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.10.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
