--- a/rre-maven-plugin/rre-maven-elasticsearch-plugin/pom.xml
+++ b/rre-maven-plugin/rre-maven-elasticsearch-plugin/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>rre-maven-elasticsearch-plugin</artifactId>
     <version>6.2.2</version>
+    <name>RRE - Maven Elasticsearch Plugin</name>
     <dependencies>
         <dependency>
             <groupId>io.sease</groupId>
