--- a/rre-server/pom.xml
+++ b/rre-server/pom.xml
@@ -8,8 +8,10 @@
         <version>1.5.6.RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <groupId>io.sease</groupId>
     <artifactId>rre-server</artifactId>
     <version>1.0</version>
+    <name>RRE - Admin Server</name>
     <properties>
         <java.version>1.8</java.version>
     </properties>
@@ -56,8 +58,45 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+    <distributionManagement>
+        <repository>
+            <id>internal.repo</id>
+            <url>file://${user.dir}/target/mvn-repo</url>
+            <layout>default</layout>
+        </repository>
+    </distributionManagement>
     <build>
         <plugins>
+                <plugin>
+                    <groupId>com.github.github</groupId>
+                    <artifactId>site-maven-plugin</artifactId>
+                    <version>0.12</version>
+                    <configuration>
+                        <message>Maven artifacts for ${project.groupId}:${project.artifactId}:${project.version}</message>
+                        <noJekyll>true</noJekyll>
+                        <outputDirectory>${user.dir}/target/mvn-repo</outputDirectory>
+                        <branch>refs/heads/mvn-repo</branch>
+                        <includes>
+                            <include>**/*</include>
+                        </includes>
+                        <repositoryName>rated-ranking-evaluator</repositoryName>
+                        <repositoryOwner>SeaseLtd</repositoryOwner>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>site</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>2.8.1</version>
+                    <configuration>
+                        <altDeploymentRepository>internal.repo::default::file://${user.dir}/target/mvn-repo</altDeploymentRepository>
+                    </configuration>
+                </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
