--- a/rre-maven-plugin/rre-maven-report-plugin/pom.xml
+++ b/rre-maven-plugin/rre-maven-report-plugin/pom.xml
@@ -67,7 +67,7 @@
                 <artifactId>maven-plugin-plugin</artifactId>
                 <version>3.5.1</version>
                 <configuration>
-                    <goalPrefix>report</goalPrefix>
+                    <goalPrefix>rre</goalPrefix>
                 </configuration>
                 <executions>
                     <execution>
