--- a/rre-maven-plugin/rre-maven-solr-plugin/src/test/resources/pom.xml
+++ b/rre-maven-plugin/rre-maven-solr-plugin/src/test/resources/pom.xml
@@ -7,9 +7,9 @@
                 <version>7.1.0</version>
                 <configuration>
                     <configurations-folder>/Users/agazzarini/workspaces/BarFridges_IJ/bfa_solr/bfa-querying/src/solr/configuration_sets</configurations-folder>
-                    <corporaFolder>/Users/agazzarini/workspaces/BarFridges_IJ/bfa_solr/bfa-querying/src/solr/corpora</corporaFolder>
-                    <ratingsFolder>/Users/agazzarini/workspaces/BarFridges_IJ/bfa_solr/bfa-querying/src/solr/ratings</ratingsFolder>
-                    <templatesFolder>/Users/agazzarini/workspaces/BarFridges_IJ/bfa_solr/bfa-querying/src/solr/templates</templatesFolder>
+                    <corpora-folder>/Users/agazzarini/workspaces/BarFridges_IJ/bfa_solr/bfa-querying/src/solr/corpora</corpora-folder>
+                    <ratings-folder>/Users/agazzarini/workspaces/BarFridges_IJ/bfa_solr/bfa-querying/src/solr/ratings</ratings-folder>
+                    <templates-folder>/Users/agazzarini/workspaces/BarFridges_IJ/bfa_solr/bfa-querying/src/solr/templates</templates-folder>
                     <fields>score,id,product_name</fields>
                     <metrics>
                         <param>io.sease.rre.core.domain.metrics.impl.Precision</param>
