--- a/rre-maven-archetype/rre-maven-elasticsearch-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/rre-maven-archetype/rre-maven-elasticsearch-archetype/src/main/resources/archetype-resources/pom.xml
@@ -32,7 +32,8 @@
                 </configuration>
                 <executions>
                     <execution>
-                        <phase>test</phase>
+                        <id>search-quality-evaluation</id>
+                        <phase>package</phase>
                         <goals>
                             <goal>evaluate</goal>
                         </goals>
@@ -46,12 +47,16 @@
                 <configuration>
                     <formats>
                         <param>spreadsheet</param>
-                        <param>rre-server</param>
+                        <!-- IMPORTANT: uncomment the following line if you're running the RRE server -->
+                        <!--
+                            <param>rre-server</param>
+                        -->
                     </formats>
                 </configuration>
                 <executions>
                     <execution>
-                        <phase>post-integration-test</phase>
+                        <id>search-quality-evaluation-reporting</id>
+                        <phase>package</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
