--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,8 @@
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>2.8.1</version>
                 <configuration>
-                    <altDeploymentRepository>internal.repo::default::file://${user.dir}/target/mvn-repo</altDeploymentRepository>
+                    <altDeploymentRepository>internal.repo::default::file://${user.dir}/target/mvn-repo
+                    </altDeploymentRepository>
                 </configuration>
             </plugin>
         </plugins>
