--- a/rre-maven-plugin/rre-maven-solr-plugin/src/test/resources/pom.xml
+++ b/rre-maven-plugin/rre-maven-solr-plugin/src/test/resources/pom.xml
@@ -6,10 +6,16 @@
                 <artifactId>rre-maven-solr-plugin</artifactId>
                 <version>7.1.0</version>
                 <configuration>
-                    <configurations-folder>/Users/agazzarini/workspaces/BarFridges_IJ/bfa_solr/bfa-querying/src/solr/configuration_sets</configurations-folder>
-                    <corpora-folder>/Users/agazzarini/workspaces/BarFridges_IJ/bfa_solr/bfa-querying/src/solr/corpora</corpora-folder>
-                    <ratings-folder>/Users/agazzarini/workspaces/BarFridges_IJ/bfa_solr/bfa-querying/src/solr/ratings</ratings-folder>
-                    <templates-folder>/Users/agazzarini/workspaces/BarFridges_IJ/bfa_solr/bfa-querying/src/solr/templates</templates-folder>
+                    <configurations-folder>
+                        /Users/agazzarini/workspaces/BarFridges_IJ/bfa_solr/bfa-querying/src/solr/configuration_sets
+                    </configurations-folder>
+                    <corpora-folder>/Users/agazzarini/workspaces/BarFridges_IJ/bfa_solr/bfa-querying/src/solr/corpora
+                    </corpora-folder>
+                    <ratings-folder>/Users/agazzarini/workspaces/BarFridges_IJ/bfa_solr/bfa-querying/src/solr/ratings
+                    </ratings-folder>
+                    <templates-folder>
+                        /Users/agazzarini/workspaces/BarFridges_IJ/bfa_solr/bfa-querying/src/solr/templates
+                    </templates-folder>
                     <fields>score,id,product_name</fields>
                     <metrics>
                         <param>io.sease.rre.core.domain.metrics.impl.Precision</param>
