--- a/rre-maven-plugin/rre-maven-report-plugin/pom.xml
+++ b/rre-maven-plugin/rre-maven-report-plugin/pom.xml
@@ -44,12 +44,17 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
-            <version>3.15</version>
+            <version>3.17</version>
         </dependency>
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
             <version>3.10.0</version>
+        </dependency>
+        <dependency>
+            <groupId>one.util</groupId>
+            <artifactId>streamex</artifactId>
+            <version>0.6.7</version>
         </dependency>
     </dependencies>
     <build>
