--- a/rre-core/pom.xml
+++ b/rre-core/pom.xml
@@ -13,7 +13,7 @@
     <dependencies>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
+            <artifactId>log4j-core</artifactId>
             <version>2.10.0</version>
         </dependency>
         <dependency>
