--- a/rre-maven-archetype/rre-maven-elasticsearch-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/rre-maven-archetype/rre-maven-elasticsearch-archetype/src/main/resources/archetype-resources/pom.xml
@@ -5,6 +5,18 @@
     <artifactId>${artifactId}</artifactId>
     <version>${version}</version>
     <packaging>pom</packaging>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
+    <pluginRepositories>
+       <pluginRepository>
+          <id>sease</id>
+          <url>https://raw.github.com/SeaseLtd/rated-ranking-evaluator/mvn-repo</url>
+       </pluginRepository>
+    </pluginRepositories>
     <build>
         <plugins>
             <plugin>
