--- a/rre-search-platform/pom.xml
+++ b/rre-search-platform/pom.xml
@@ -16,4 +16,13 @@
         <module>rre-search-platform-solr-impl</module>
         <module>rre-search-platform-elastic-search-impl</module>
     </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
