External Elasticsearch framework.

--- a/rre-maven-plugin/pom.xml
+++ b/rre-maven-plugin/pom.xml
@@ -14,6 +14,7 @@
         <module>rre-maven-solr-plugin</module>
         <module>rre-maven-report-plugin</module>
         <module>rre-maven-elasticsearch-plugin</module>
+        <module>rre-maven-external-elasticsearch-plugin</module>
     </modules>
     <packaging>pom</packaging>
     <properties>
