--- a/rre-maven-archetype/rre-maven-external-elasticsearch-archetype/pom.xml
+++ b/rre-maven-archetype/rre-maven-external-elasticsearch-archetype/pom.xml
@@ -3,17 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>rre</artifactId>
+        <artifactId>rre-maven-archetype</artifactId>
         <groupId>io.sease</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>rre-maven-archetype</artifactId>
-    <packaging>pom</packaging>
-    <name>RRE - Maven Archetypes</name>
-    <modules>
-        <module>rre-maven-solr-archetype</module>
-        <module>rre-maven-elasticsearch-archetype</module>
-        <module>rre-maven-external-elasticsearch-archetype</module>
-    </modules>
+    <artifactId>rre-maven-external-elasticsearch-archetype</artifactId>
+    <name>RRE - Maven External Elasticsearch Archetype</name>
 </project>
