--- a/rre-persistence-plugin/pom.xml
+++ b/rre-persistence-plugin/pom.xml
@@ -9,6 +9,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <name>RRE - Persistence Framework</name>
+    <modules>
+        <module>rre-persistence-plugin-elasticsearch</module>
+    </modules>
     <artifactId>rre-persistence-plugin</artifactId>
     <packaging>pom</packaging>
 
@@ -18,6 +21,12 @@
             <artifactId>rre-core</artifactId>
             <version>${parent.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
