--- a/rre-persistence-plugin/rre-persistence-plugin-elasticsearch/pom.xml
+++ b/rre-persistence-plugin/rre-persistence-plugin-elasticsearch/pom.xml
@@ -33,6 +33,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.assertj</groupId>
