Include result data in persisted documents.

--- a/rre-persistence-plugin/rre-persistence-plugin-elasticsearch/src/main/resources/es_config.json
+++ b/rre-persistence-plugin/rre-persistence-plugin-elasticsearch/src/main/resources/es_config.json
@@ -34,6 +34,9 @@
               "type": "float"
             }
           }
+        },
+        "results": {
+          "enabled": false
         }
       }
     }
