Provide external Solr connector, allowing connections to already-running Solr instances.
Squashed commit of the following:

commit d545ae6fb06a9e5cca48dce3a13c71465c914818
Author: Matt Pearce <matt@flax.co.uk>
Date:   Thu Feb 21 11:25:02 2019 +0000

    Add socket and connection timeout config for Solr clients.

commit 2dd0b4d3477dbd5862703dc12323446d8d452747
Author: Matt Pearce <matt@flax.co.uk>
Date:   Thu Feb 21 09:48:12 2019 +0000

    Tidy pom.xml

commit 8867871f20a195f297bf050d00b9e0d57e55652d
Author: Matt Pearce <matt@flax.co.uk>
Date:   Thu Feb 21 09:37:45 2019 +0000

    Implement usage of CloudSolrClient with multiple Solr instances.

    - Modify SolrSettings to allow for multiple base URLs, Zookeeper hosts.
    - Implement external manager class for instantiating SolrClients.
    - Modify archetype Solr settings files to reflect changes.

commit 369a2dbe5f0a4ee090eb029ab87878c9e4101525
Author: Matt Pearce <matt@flax.co.uk>
Date:   Wed Feb 20 10:58:13 2019 +0000

    Add external Solr archetype.

commit 94f6a177804753cb5de437a7e207b789d4340fa1
Author: Matt Pearce <matt@flax.co.uk>
Date:   Wed Feb 20 10:09:56 2019 +0000

    Tidy module renaming - fix unchanged pom files.

commit bb5ddc6d726a0e4cb72aa2b0350f3c8e5f9e610f
Author: Matt Pearce <matt@flax.co.uk>
Date:   Wed Feb 20 09:52:48 2019 +0000

    Rename external Solr implementation directory for consistency.

commit f7ed7b2e8f05575398d5dafea0f4bdb7f6b667f3
Author: Matt Pearce <matt@flax.co.uk>
Date:   Wed Feb 20 09:33:14 2019 +0000

    Initial work to add external Solr access to RRE evaluation.

    - Added module to search platform.
    - Added module to Maven plugins.

--- a/rre-maven-archetype/pom.xml
+++ b/rre-maven-archetype/pom.xml
@@ -33,5 +33,6 @@
         <module>rre-maven-solr-archetype</module>
         <module>rre-maven-elasticsearch-archetype</module>
         <module>rre-maven-external-elasticsearch-archetype</module>
+        <module>rre-maven-external-solr-archetype</module>
     </modules>
 </project>
