--- a/rre-maven-archetype/rre-maven-external-solr-archetype/pom.xml
+++ b/rre-maven-archetype/rre-maven-external-solr-archetype/pom.xml
@@ -21,27 +21,25 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>rre</artifactId>
+        <artifactId>rre-maven-archetype</artifactId>
         <groupId>io.sease</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <name>RRE - Search Platform bindings</name>
-    <artifactId>rre-search-platform</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>rre-search-platform-api</module>
-        <module>rre-search-platform-solr-impl</module>
-        <module>rre-search-platform-elastic-search-impl</module>
-        <module>rre-search-platform-external-solr-impl</module>
-    </modules>
-
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+    <artifactId>rre-maven-external-solr-archetype</artifactId>
+    <name>RRE - Maven External Apache Solr Archetype</name>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.rat</groupId>
+                <artifactId>apache-rat-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>**/*.md</exclude>
+                        <exclude>**/*.json</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
