--- a/rre-core/pom.xml
+++ b/rre-core/pom.xml
@@ -50,5 +50,10 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.7.14</version>
+        </dependency>
     </dependencies>
 </project>
