--- a/rre-core/pom.xml
+++ b/rre-core/pom.xml
@@ -55,5 +55,11 @@
             <artifactId>mockito-core</artifactId>
             <version>2.26.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.3.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
