Exclude restlet-api from solr test framework

--- a/rre-search-platform/rre-search-platform-external-solr-impl/pom.xml
+++ b/rre-search-platform/rre-search-platform-external-solr-impl/pom.xml
@@ -30,6 +30,16 @@
             <artifactId>solr-test-framework</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.restlet.jee</groupId>
+                    <artifactId>org.restlet</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.restlet.jee</groupId>
+                    <artifactId>org.restlet.ext.servlet</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 </project>
