--- a/rre-maven-archetype/rre-maven-solr-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/rre-maven-archetype/rre-maven-solr-archetype/src/main/resources/archetype-resources/pom.xml
@@ -40,7 +40,7 @@
             <plugin>
                 <groupId>io.sease</groupId>
                 <artifactId>rre-maven-solr-plugin</artifactId>
-                <version>${solrVersion}</version>
+                <version>1.0</version>
                 <!-- the configuration below is provided just for example, as it perfectly matches default values -->
                 <configuration>
                     <configurations-folder>src/etc/configuration_sets</configurations-folder>
