--- a/rre-maven-plugin/rre-maven-external-solr-plugin/pom.xml
+++ b/rre-maven-plugin/rre-maven-external-solr-plugin/pom.xml
@@ -8,11 +8,9 @@
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>rre-maven-external-solr-plugin</artifactId>
-    <version>7.6.0</version>
     <packaging>maven-plugin</packaging>
-    <name>RRE - Maven External Apache Solr Plugin</name>
+    <name>RRE - Maven External Apache Solr Plugin V${project.version}</name>
     <dependencies>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -22,12 +20,12 @@
         <dependency>
             <groupId>io.sease</groupId>
             <artifactId>rre-search-platform-api</artifactId>
-            <version>1.0</version>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>io.sease</groupId>
             <artifactId>rre-search-platform-external-solr-impl</artifactId>
-            <version>${project.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 
