--- a/rre-maven-plugin/rre-maven-solr-plugin/pom.xml
+++ b/rre-maven-plugin/rre-maven-solr-plugin/pom.xml
@@ -27,7 +27,6 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>rre-maven-solr-plugin</artifactId>
-    <version>7.4.0</version>
     <packaging>maven-plugin</packaging>
     <name>RRE - Maven Apache Solr Plugin</name>
     <dependencies>
@@ -39,12 +38,12 @@
         <dependency>
             <groupId>io.sease</groupId>
             <artifactId>rre-search-platform-api</artifactId>
-            <version>1.0</version>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>io.sease</groupId>
             <artifactId>rre-search-platform-solr-impl</artifactId>
-            <version>${project.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 </project>
