--- a/rre-search-platform/rre-search-platform-solr-impl/pom.xml
+++ b/rre-search-platform/rre-search-platform-solr-impl/pom.xml
@@ -27,8 +27,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>rre-search-platform-solr-impl</artifactId>
-    <version>7.4.0</version>
-    <name>RRE - Apache Solr platform binding</name>
+    <name>RRE - Embedded Apache Solr (version ${solrVersion}) platform binding</name>
     <dependencies>
         <dependency>
             <groupId>io.sease</groupId>
@@ -38,12 +37,12 @@
         <dependency>
             <groupId>org.apache.solr</groupId>
             <artifactId>solr-solrj</artifactId>
-            <version>${project.version}</version>
+            <version>LATEST</version>
         </dependency>
         <dependency>
             <groupId>org.apache.solr</groupId>
             <artifactId>solr-core</artifactId>
-            <version>${project.version}</version>
+            <version>${solrVersion}</version>
         </dependency>
     </dependencies>
     <build>
