--- a/rre-search-platform/rre-search-platform-solr-impl/pom.xml
+++ b/rre-search-platform/rre-search-platform-solr-impl/pom.xml
@@ -27,7 +27,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>rre-search-platform-solr-impl</artifactId>
-    <version>7.4.0</version>
+    <version>6.6.6</version>
     <name>RRE - Apache Solr platform binding</name>
     <dependencies>
         <dependency>
@@ -44,6 +44,17 @@
             <groupId>org.apache.solr</groupId>
             <artifactId>solr-core</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.10.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.4</version>
         </dependency>
     </dependencies>
     <build>
