Add archetype for the generic search plugin.

--- a/rre-maven-archetype/pom.xml
+++ b/rre-maven-archetype/pom.xml
@@ -34,5 +34,6 @@
         <module>rre-maven-elasticsearch-archetype</module>
         <module>rre-maven-external-elasticsearch-archetype</module>
         <module>rre-maven-external-solr-archetype</module>
+        <module>rre-maven-generic-search-archetype</module>
     </modules>
 </project>
