--- a/rre-maven-archetype/rre-maven-generic-search-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/rre-maven-archetype/rre-maven-generic-search-archetype/src/main/resources/archetype-resources/pom.xml
@@ -46,7 +46,7 @@
                     <dependency>
                         <groupId>com.mysearch</groupId>
                         <artifactId>my-searchplatform-implementation</artifactId>
-                        <version>1.1</version>
+                        <version>1.2-SNAPSHOT</version>
                     </dependency>
                 </dependencies>
                 <!-- the configuration below is provided just for example, as it perfectly matches default values -->
