--- a/rre-persistence-plugin/rre-persistence-plugin-elasticsearch/pom.xml
+++ b/rre-persistence-plugin/rre-persistence-plugin-elasticsearch/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <artifactId>rre-persistence-plugin</artifactId>
         <groupId>io.sease</groupId>
-        <version>1.1</version>
+        <version>1.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
