--- a/rre-search-platform/rre-search-platform-api/pom.xml
+++ b/rre-search-platform/rre-search-platform-api/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <artifactId>rre-search-platform</artifactId>
         <groupId>io.sease</groupId>
-        <version>1.1</version>
+        <version>1.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>rre-search-platform-api</artifactId>
