--- a/rre-server/pom.xml
+++ b/rre-server/pom.xml
@@ -29,7 +29,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.sease</groupId>
     <artifactId>rre-server</artifactId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
     <name>RRE - Web Control Panel</name>
     <properties>
         <java.version>1.8</java.version>
